objects/OM_Other__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Parent_Account__c</field>
                <operation>equals</operation>
                <valueField>Account.Parent.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OM Other (Account)</relationshipLabel>
        <relationshipName>OM_Other2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Quarter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Close Quarter</label>
        <referenceTo>Expected_Close_Quarter__c</referenceTo>
        <relationshipLabel>OM Other</relationshipLabel>
        <relationshipName>OM_Other</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account_Address__c</fullName>
        <description>Bill to Account Address</description>
        <formula>SUBSTITUTE(SUBSTITUTE(IF( ISBLANK(Bill_To_Address__r.Address__c) , &apos;&apos;, Bill_To_Address__r.Address__c+&apos;, &apos;)+ 
IF( ISBLANK(Bill_To_Address__r.City__c) , &apos;&apos;, Bill_To_Address__r.City__c+&apos;, &apos;)+ 
IF( ISBLANK(Bill_To_Address__r.State_Region__c) , &apos;&apos;, Bill_To_Address__r.State_Region__r.Name +&apos;, &apos;)+ 
IF( ISBLANK(Bill_To_Address__r.Postal_Code__c) , &apos;&apos;, Bill_To_Address__r.Postal_Code__c+&apos;, &apos;)+&quot;$$&quot;,
&quot;, $$&quot;, NULL),&quot;$$&quot;,NULL)</formula>
        <inlineHelpText>Bill to Account Address</inlineHelpText>
        <label>Bill To Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Address</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OM Other (Bill To Address)</relationshipLabel>
        <relationshipName>OM_Other1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoice_instructions__c</fullName>
        <label>Invoice instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Comments__c</fullName>
        <label>Notes/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_number__c</fullName>
        <label>PO number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value>&quot;&quot;</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OM Other (Parent Account)</relationshipLabel>
        <relationshipName>OM_Other3</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rec_Risk_Rating__c</fullName>
        <label>Rec Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Number__c</fullName>
        <formula>IF(RecordTypeId = &quot;012q00000000MH3&quot;, &quot;CE&quot;,null) +
IF(RecordTypeId = &quot;012q00000000MH8&quot;, &quot;RY-EMA&quot;,null) +
IF(RecordTypeId = &quot;012q00000000MHD&quot;, &quot;RY–IP&quot;,null) +
IF(RecordTypeId = &quot;012q00000000MHI&quot;, &quot;IR&quot;,null)
+ &quot;-&quot;  + Record_Sequence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Sequence__c</fullName>
        <description>for record number</description>
        <displayFormat>{0000}</displayFormat>
        <label>Record Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This picklist will drive regions.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account_Address__c</fullName>
        <description>Ship to account address</description>
        <formula>SUBSTITUTE(SUBSTITUTE(IF( ISBLANK(Ship_To_Address__r.Address__c) , &apos;&apos;, Ship_To_Address__r.Address__c+&apos;, &apos;)+ 
IF( ISBLANK(Ship_To_Address__r.City__c) , &apos;&apos;, Ship_To_Address__r.City__c+&apos;, &apos;)+ 
IF( ISBLANK(Ship_To_Address__r.State_Region__c) , &apos;&apos;, Ship_To_Address__r.State_Region__r.Name +&apos;, &apos;)+ 
IF( ISBLANK(Ship_To_Address__r.Postal_Code__c) , &apos;&apos;, Ship_To_Address__r.Postal_Code__c+&apos;, &apos;)+&quot;$$&quot;, 
&quot;, $$&quot;, NULL),&quot;$$&quot;,NULL)</formula>
        <inlineHelpText>Ship to account address</inlineHelpText>
        <label>Ship To Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Address</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OM Other</relationshipLabel>
        <relationshipName>OM_Other</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_to_Account_SAP__c</fullName>
        <description>Sold to SAP/Account</description>
        <formula>IF( ISBLANK( Account__r.SAP_Customer_ID_Mask__c ) , Account__r.Account_Number__c , Account__r.SAP_Customer_ID_Mask__c )</formula>
        <inlineHelpText>Sold to SAP/Account</inlineHelpText>
        <label>Sold to Account-SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Submitter to show in Conga reports</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OM_Other</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_end_date__c</fullName>
        <label>Term end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_start_date__c</fullName>
        <label>Term start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VAR_Royalty_Start__c</fullName>
        <description>For the approval process of EMA royalty record type</description>
        <label>VAR Royalty Start</label>
        <type>DateTime</type>
    </fields>
    <label>OM Other</label>
    <listViews>
        <fullName>Credit_OM_Other</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit</label>
        <queue>Credit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dublin_OM_IP_EMEA_OM_Other</fullName>
        <filterScope>Queue</filterScope>
        <label>Dublin OM IP EMEA</label>
        <queue>Dublin_OM_IP_EMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dublin_Revenue_Accounting_OM_Other</fullName>
        <filterScope>Queue</filterScope>
        <label>Dublin Revenue Accounting</label>
        <queue>Dublin_Revenue_Accounting</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EU_Credit_OM_Other</fullName>
        <filterScope>Queue</filterScope>
        <label>EU Credit</label>
        <queue>EU_Credit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Revenue_Accounting_OM_Other</fullName>
        <filterScope>Queue</filterScope>
        <label>Revenue Accounting</label>
        <queue>Revenue_Accounting</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VAR_royalty_approver_OM_Other</fullName>
        <filterScope>Queue</filterScope>
        <label>VAR royalty approver</label>
        <queue>VAR_royalty_approver</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OM-{0000}</displayFormat>
        <label>OM Other Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OM Other</pluralLabel>
    <recordTypes>
        <fullName>Asia_Training</fullName>
        <active>true</active>
        <label>Asia Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chip_Estimate</fullName>
        <active>true</active>
        <label>Chip Estimate</label>
    </recordTypes>
    <recordTypes>
        <fullName>ILS_New</fullName>
        <active>true</active>
        <label>ILS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoice_Request</fullName>
        <active>true</active>
        <label>Invoice Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Royalty_IP</fullName>
        <active>true</active>
        <label>Royalty- IP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Royalty_VAR</fullName>
        <active>true</active>
        <label>Royalty-VAR</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Edit_Locked_OM</fullName>
        <active>true</active>
        <description>used to allow credit team to able to edit OM Other during approval flow.</description>
        <errorConditionFormula>AND($Profile.Name&lt;&gt;&quot;4_5 - Credit&quot;,
    $Profile.Name&lt;&gt;&quot;5_1 - Data Steward&quot;,
    $Profile.Name&lt;&gt;&quot;Integration&quot;,
    $Profile.Name&lt;&gt;&quot;System Administrator Custom&quot;,
    $Profile.Name&lt;&gt;&quot;System Administrator&quot;,
    $Profile.Name&lt;&gt;&quot;System Admin ReadOnly&quot;,
   
    ISPICKVAL(Status__c, &quot;Pending&quot;)
)</errorConditionFormula>
        <errorMessage>You cannot edit OM Other while it is locked for Approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_for_IP_Royalty_Record_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND($RecordType.Name = &apos;Royalty- IP&apos;,ISPICKVAL(Region__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Region is required for Royalty- IP Record Type.</errorMessage>
    </validationRules>
</CustomObject>